# treepo

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
configs/: runpod.env.example
scripts/: run_all_experiments.sh  runpod_train.sh
src/lean_treepo/: __init__.py  config.py  data.py  evaluate.py  formatting.py  lean_client.py  plots.py  rewards.py  train.py  trainer.py  tree_advantage.py  tree_sampler.py
tests/: test_config_validation.py  test_data.py  test_formatting.py  test_lean_client.py  test_tree_advantage.py  test_tree_sampler.py
